:bug: fix jumping lateral

--- a/src/scss/layout/_lateral.scss
+++ b/src/scss/layout/_lateral.scss
@@ -10,12 +10,12 @@
     &.left{
         left: 25px;
         transform-origin: 0 50%;
-        transform: rotate(-90deg);
+        transform: rotate3d(0, 0, 1, -90deg);
     }
     &.right{
         right: 25px;
         transform-origin: 100% 50%;
-        transform: rotate(90deg);
+        transform: rotate3d(0, 0, 1, 90deg);
     }
     a{
         font-family: $carrosserie;
